--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -11,7 +11,7 @@ spring:
     mongodb:
       host: localhost
       port: 27017
-      database: Traceability-db
+      database: <db>
 
 my-app:
   security:
